--- a/sign_up.html
+++ b/sign_up.html
@@ -43,8 +43,13 @@
                                             <input class="inp" name="mail" id="e_mail" placeholder="user123@gmail.com">
                                         </div>
                                         <div class="col-md-12">
+                                                <h2>Upload Photo</h2>
+                                                <input type="file"class="inp" name="mail">
+                                            </div>
+                                        <div class="col-md-12">
                                                 <input type="submit" class="btn" style="margin-left:300px;margin-top: 50px; width: 160px; height: 50px; font-size: 18px;" value="Complete Profile" name="submit" onclick="on()">
                                             </div>
+                                        
                     </form>
                 </div>
         </div>
